# OwlWatch

./: .gitignore  README.md  docker-compose-cn.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.cn  baidu_result.txt  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py  setup.py  tavily_result.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  schedulers.py
backend/app/analyzers/: __init__.py  sentiment.py  summary.py  trend.py
backend/app/collectors/: __init__.py  anspire.py  baidu.py  base.py  bing.py  bocha.py  rss_collector.py  tavily.py
backend/app/core/: security.py
backend/app/data/: default_sentiment_keywords.py
backend/app/models/: __init__.py  alert.py  article.py  article_keyword.py  keyword.py  keyword_rss_association.py  keyword_sentiment_stats.py  negative_keyword.py  report.py  rss_feed.py  rsshub_config.py  sentiment_analysis.py  sentiment_keyword.py  tenant.py  user.py
backend/app/schedulers/: __init__.py  keyword_scheduler.py  monitor_scheduler.py  rss_scheduler.py  sentiment_worker.py
backend/app/scripts/: add_fetch_interval.py  add_last_fetched.py  backfill_sentiment_stats.py  init_db.py  migrate_rss_associations.py
backend/app/services/: __init__.py  alert_service.py  redis_service.py  report_service.py  sentiment_analyzer.py  (+1 more)
backend/create/: pyvenv.cfg
backend/scripts/: init_sentiment_data.py  migrate_add_columns.py  migrate_add_unique_url.py  migrate_sentiment_keywords.py
backend/tests/: conftest.py
frontend/: Dockerfile  (+6 more)
(+52 files in other folders)
