[project]
name = "owlwatch-backend"
version = "0.1.0"
description = "OwlWatch 舆情监控系统后端服务"
authors = ["OwlWatch Team"]

[tool.poetry]
packages = ["."]

[build-system]
requires = ["poetry-core"]

[tool.poetry.dependencies]
python = "^3.11"

[project.scripts]
start = "uvicorn app.main:app --reload"

# ==================== Pytest 配置 ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# 标记定义
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试",
    "external: 需要外部 API 的测试",
]

# 默认选项
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
    "-m", "not external",
]

# 日志配置
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"

# ==================== Coverage 配置 ====================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
